--- a/config/locales/devise.pt-BR.yml
+++ b/config/locales/devise.pt-BR.yml
@@ -7,3 +7,10 @@ pt-BR:
     sessions:
       signed_in: 'Login realizado com sucesso.'
       signed_out: 'Logout realizado com sucesso.'
+    registrations:
+      signed_up: "Cadastro realizado com sucesso."
+      user:
+        signed_up: "Cadastro realizado com sucesso."
+      signed_up_but_unconfirmed: "Uma mensagem com um link de confirmação foi enviada para seu e-mail. Por favor, abra o link para ativar sua conta."
+      signed_up_but_inactive: "Você se cadastrou com sucesso. No entanto, não podemos logá-lo pois sua conta ainda não foi ativada."
+      signed_up_but_locked: "Você se cadastrou com sucesso. No entanto, não podemos logá-lo pois sua conta está bloqueada."
