--- a/config/locales/devise.pt-BR.yml
+++ b/config/locales/devise.pt-BR.yml
@@ -1,16 +1,89 @@
 pt-BR:
   devise:
+    confirmations:
+      confirmed: "Sua conta foi confirmada com sucesso."
+      send_instructions: "Você receberá um email com instruções para confirmar sua conta em alguns minutos."
+      send_paranoid_instructions: "Se seu endereço de email existir em nosso banco de dados, você receberá um email com instruções para confirmar sua conta em alguns minutos."
     failure:
-      invalid: 'Email ou senha inválidos.'
-      not_found_in_database: 'Email não encontrado.'
-      unauthenticated: 'Você precisa fazer login para continuar.'
-    sessions:
-      signed_in: 'Login realizado com sucesso.'
-      signed_out: 'Logout realizado com sucesso.'
+      already_authenticated: "Você já está autenticado."
+      inactive: "Sua conta ainda não foi ativada."
+      invalid: "Email ou senha inválidos."
+      locked: "Sua conta está bloqueada."
+      last_attempt: "Você tem mais uma tentativa antes que sua conta seja bloqueada."
+      not_found_in_database: "Email ou senha inválidos."
+      timeout: "Sua sessão expirou. Por favor, faça login novamente para continuar."
+      unauthenticated: "Você precisa fazer login ou se registrar antes de continuar."
+      unconfirmed: "Você precisa confirmar seu endereço de email antes de continuar."
+    mailer:
+      confirmation_instructions:
+        subject: "Instruções de confirmação"
+      reset_password_instructions:
+        subject: "Instruções de redefinição de senha"
+      unlock_instructions:
+        subject: "Instruções de desbloqueio"
+      email_changed:
+        subject: "Email alterado"
+      password_change:
+        subject: "Senha alterada"
+    omniauth_callbacks:
+      failure: "Não foi possível autenticá-lo em %{kind} porque \"%{reason}\"."
+      success: "Autenticado com sucesso com a conta de %{kind}."
+    passwords:
+      no_token: "Você não pode acessar esta página sem vir de um email de redefinição de senha. Se você veio de um email de redefinição de senha, por favor, certifique-se de que usou a URL completa fornecida."
+      send_instructions: "Você receberá um email com instruções sobre como redefinir sua senha em alguns minutos."
+      send_paranoid_instructions: "Se seu endereço de email existir em nosso banco de dados, você receberá um link de recuperação de senha em alguns minutos."
+      updated: "Sua senha foi alterada com sucesso. Você está logado agora."
+      updated_not_active: "Sua senha foi alterada com sucesso."
     registrations:
-      signed_up: "Cadastro realizado com sucesso."
+      destroyed: "Sua conta foi cancelada com sucesso. Esperamos vê-lo novamente em breve."
+      signed_up: "Bem-vindo! Você se registrou com sucesso."
+      signed_up_but_inactive: "Você se registrou com sucesso. No entanto, não podemos autenticá-lo porque sua conta ainda não foi ativada."
+      signed_up_but_locked: "Você se registrou com sucesso. No entanto, não podemos autenticá-lo porque sua conta está bloqueada."
+      signed_up_but_unconfirmed: "Uma mensagem com um link de confirmação foi enviada para o seu endereço de email. Por favor, siga o link para ativar sua conta."
+      update_needs_confirmation: "Você atualizou sua conta com sucesso, mas precisamos verificar seu novo endereço de email. Por favor, verifique seu email e siga o link de confirmação para confirmar seu novo endereço de email."
+      updated: "Sua conta foi atualizada com sucesso."
+      updated_but_not_signed_in: "Sua conta foi atualizada com sucesso, mas como sua senha foi alterada, você precisa fazer login novamente."
+    sessions:
+      signed_in: "Logado com sucesso."
+      signed_out: "Saiu com sucesso."
+      already_signed_out: "Saiu com sucesso."
+    unlocks:
+      send_instructions: "Você receberá um email com instruções para desbloquear sua conta em alguns minutos."
+      send_paranoid_instructions: "Se sua conta existir, você receberá um email com instruções para desbloqueá-la em alguns minutos."
+      unlocked: "Sua conta foi desbloqueada com sucesso. Por favor, faça login para continuar."
+  errors:
+    messages:
+      already_confirmed: "já foi confirmado, por favor tente fazer login"
+      confirmation_period_expired: "precisa ser confirmado dentro de %{period}, por favor solicite um novo"
+      expired: "expirou, por favor solicite um novo"
+      not_found: "não encontrado"
+      not_locked: "não estava bloqueado"
+      not_saved:
+        one: "1 erro impediu que %{resource} fosse salvo:"
+        other: "%{count} erros impediram que %{resource} fosse salvo:"
+  activerecord:
+    attributes:
       user:
-        signed_up: "Cadastro realizado com sucesso."
-      signed_up_but_unconfirmed: "Uma mensagem com um link de confirmação foi enviada para seu e-mail. Por favor, abra o link para ativar sua conta."
-      signed_up_but_inactive: "Você se cadastrou com sucesso. No entanto, não podemos logá-lo pois sua conta ainda não foi ativada."
-      signed_up_but_locked: "Você se cadastrou com sucesso. No entanto, não podemos logá-lo pois sua conta está bloqueada."
+        confirmation_sent_at: Data de envio da confirmação
+        confirmation_token: Token de confirmação
+        confirmed_at: Data da confirmação
+        created_at: Data de criação
+        current_password: Senha atual
+        current_sign_in_at: Data do login atual
+        current_sign_in_ip: IP do login atual
+        email: Email
+        encrypted_password: Senha criptografada
+        failed_attempts: Tentativas falhas
+        last_sign_in_at: Data do último login
+        last_sign_in_ip: IP do último login
+        locked_at: Data do bloqueio
+        password: Senha
+        password_confirmation: Confirmação de senha
+        remember_created_at: Data da lembrança criada
+        remember_me: Lembrar-me
+        reset_password_sent_at: Data de envio da redefinição de senha
+        reset_password_token: Token de redefinição de senha
+        sign_in_count: Quantidade de logins
+        unconfirmed_email: Email não confirmado
+        unlock_token: Token de desbloqueio
+        updated_at: Data de atualização
